<resources>
    <string name="app_name">PokemonApp</string>
    <string name="name">Name</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="moves">Moves</string>
    <string name="abilities">Abilities</string>
    <string name="types">Types</string>
    <string name="species">Species</string>
    <string name="stats">Stats</string>
    <string name="base_experience">Base Experience</string>
    <string name="held_items">Held Items</string>
    <string name="forms">Forms</string>
    <string name="sprites">Sprites</string>
    <string name="front_female">Front Female</string>
    <string name="front_shiny">Front Shiny</string>
    <string name="front_shiny_female">Front Shiny Female</string>
    <string name="back_shiny">Back Shiny</string>
    <string name="back_shiny_female">Back Shiny Female</string>
    <string name="front_default">Front Default</string>
    <string name="imageview">ImageView</string>
    <string name="back_default">Back Default</string>
    <string name="back_female">Back Female</string>
    <string name="effort">Effort</string>
    <string name="base_stat">Base Stat</string>
    <string name="bambang_ariyanto">Bambang Ariyanto</string>
    <string name="photos">Photos</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="cyber_hecker_gmail_com">cyber.hecker@gmail.com</string>
    <string name="_62813_4501_9699">+62813 4501 9699</string>
    <string name="add_to_group">Add to group</string>
    <string name="show_all_comments">Show all comments</string>
    <string name="follow_me">Follow Me</string>
    <string name="hidden">Hidden</string>
    <string name="slot">Slot</string>
    <string name="judul">Belajar Membuat Aplikasi Android untuk Pemula</string>
    <string name="submission">Submission</string>
    <string name="about">About</string>
</resources>